...
                    android:textAllCaps="true"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:accessibilityHeading="true"/>

                <ImageButton
                    android:id="@+id/addPublicLinkButton"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_alignParentEnd="true"
                    android:background="@color/transparent"
                    android:src="@drawable/ic_add"
                    android:contentDescription="@string/content_description_add_public_link" />
...
