...
                        android:layout_weight="1"
                        android:contentDescription="shareAddPublicLinkCancelButton"
                        android:text="@string/share_cancel_public_link_button"
                        android:theme="@style/Button.Primary" />

                    <android.support.v7.widget.AppCompatButton
                        android:id="@+id/saveButton"
                        style="@style/Button.Primary"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:contentDescription="shareAddPublicLinkConfirmButton"
                        android:text="@string/share_confirm_public_link_button"
...
