...
            android:padding="14dp"
            android:src="@drawable/copy_link"
            android:scaleType="centerCrop"
            android:background="@color/transparent" />

        <ImageButton
            android:id="@+id/deletePublicLinkButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="center_vertical"
            android:padding="14dp"
            android:src="@drawable/ic_action_delete_grey"
            android:scaleType="centerCrop"
...
